--- a/app/courses.html
+++ b/app/courses.html
@@ -29,11 +29,11 @@ current: courses
     <div class="flex-col items-center min-w-[168px]">
       <div class="flex items-center justify-center md:flex-col">
         <p class="text-center mb-1 mr-2 md:mr-0">50分鐘</p>
-        <p class="text-center text-[32px] mb-4 font-semi-bold">NT$1600</p>
+        <p class="text-center text-[32px] mb-4 font-semi-bold font-mono">NT$1600</p>
       </div>
       <div class="flex md:flex-col">
-        <div class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2">課程介紹</div>
-        <div class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green">立即預約</div>
+        <a href="#" class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2 hover:-translate-y-0.5 transition duration-200">課程介紹</a>
+        <a href="#" class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green hover:-translate-y-0.5 transition duration-200">立即預約</a>
       </div>
     </div>
   </li>
@@ -50,11 +50,11 @@ current: courses
     <div class="flex-col items-center min-w-[168px]">
       <div class="flex items-center justify-center md:flex-col">
         <p class="text-center mb-1 mr-2 md:mr-0">50分鐘</p>
-        <p class="text-center text-[32px] mb-4 font-semi-bold">NT$2000</p>
+        <p class="text-center text-[32px] mb-4 font-semi-bold font-mono">NT$2000</p>
       </div>
       <div class="flex md:flex-col">
-        <div class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2">課程介紹</div>
-        <div class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green">立即預約</div>
+        <a href="#" class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2 hover:-translate-y-0.5 transition duration-200">課程介紹</a>
+        <a href="#" class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green hover:-translate-y-0.5 transition duration-200">立即預約</a>
       </div>
     </div>
   </li>
@@ -71,11 +71,11 @@ current: courses
     <div class="flex-col items-center min-w-[168px]">
       <div class="flex items-center justify-center md:flex-col">
         <p class="text-center mb-1 mr-2 md:mr-0">50分鐘</p>
-        <p class="text-center text-[32px] mb-4 font-semi-bold">NT$1800</p>
+        <p class="text-center text-[32px] mb-4 font-semi-bold font-mono">NT$1800</p>
       </div>
       <div class="flex md:flex-col">
-        <div class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2">課程介紹</div>
-        <div class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green">立即預約</div>
+        <a href="#" class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2 hover:-translate-y-0.5 transition duration-200">課程介紹</a>
+        <a href="#" class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green hover:-translate-y-0.5 transition duration-200">立即預約</a>
       </div>
     </div>
   </li>
@@ -92,11 +92,11 @@ current: courses
     <div class="flex-col items-center min-w-[168px]">
       <div class="flex items-center justify-center md:flex-col">
         <p class="text-center mb-1 mr-2 md:mr-0">50分鐘</p>
-        <p class="text-center text-[32px] mb-4 font-semi-bold">NT$1100</p>
+        <p class="text-center text-[32px] mb-4 font-semi-bold font-mono">NT$1100</p>
       </div>
       <div class="flex md:flex-col">
-        <div class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2">課程介紹</div>
-        <div class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green">立即預約</div>
+        <a href="#" class="button w-1/2 md:w-full text-center mr-2 md:mr-0 py-2 border rounded-lg text-lg md:mb-2 hover:-translate-y-0.5 transition duration-200">課程介紹</a>
+        <a href="#" class="button w-1/2 md:w-full text-center py-2 rounded-lg text-lg bg-gradient-to-r from-blue to-green hover:-translate-y-0.5 transition duration-200">立即預約</a>
       </div>
     </div>
   </li>
