--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@ current: index
 <!-- feature section -->
 
 <div class="feature text-center bg-neutral-800 pt-10 pb-12 md:py-28">
-  <div class="container flex flex-col space-y-6 md:flex md:flex-row md:space-x-6 md:space-y-0">
+  <div data-aos="fade-in" class="container flex flex-col space-y-6 md:flex md:flex-row md:space-x-6 md:space-y-0">
     <div class="md:w-1/4 flex flex-col justify-center">
       <h2 class="font-bold text-2xl mb-4 md:text-left md:text-[28px]">手把手帶你<br>親自到家教到會</h2>
       <div class="mx-auto md:m-0 w-[50px] h-[3px] bg-green"></div>
@@ -31,9 +31,9 @@ current: index
 
     <div class="md:w-1/4">
       <a href="#"
-        class="hover-cards h-full flex flex-col px-4 py-12 md:mt-0 bg-neutral-900 rounded-2xl md:text-neutral-400 md:hover:text-white md:hover:ring-1 md:hover:ring-white">
+        class="group h-full flex flex-col px-4 py-12 md:mt-0 bg-neutral-900 rounded-2xl md:text-neutral-400 md:hover:text-white md:hover:ring-1 md:hover:ring-white">
         <span
-          class="material-icons text-5xl bg-clip-text text-transparent bg-gradient-to-t from-green to-blue md:bg-transparent md:text-neutral-400">
+          class="material-icons text-5xl bg-clip-text text-transparent bg-gradient-to-t from-green to-blue md:bg-transparent md:text-neutral-400 group-hover:text-transparent">
           code
         </span>
         <p class="text-lg font-bold mb-4">超過 100 種專業課程</p>
@@ -42,9 +42,9 @@ current: index
     </div>
     <div class="md:w-1/4">
       <a href="#"
-        class="hover-cards h-full flex flex-col px-4 py-12 md:mt-0 bg-neutral-900 rounded-2xl md:text-neutral-400 md:hover:text-white md:hover:ring-1 md:hover:ring-white">
+        class="group h-full flex flex-col px-4 py-12 md:mt-0 bg-neutral-900 rounded-2xl md:text-neutral-400 md:hover:text-white md:hover:ring-1 md:hover:ring-white">
         <span
-          class="material-icons text-5xl bg-clip-text text-transparent bg-gradient-to-t from-green to-blue md:bg-transparent md:text-neutral-400">
+          class="material-icons text-5xl bg-clip-text text-transparent bg-gradient-to-t from-green to-blue md:bg-transparent md:text-neutral-400 group-hover:text-transparent">
           rocket_launch
         </span>
         <p class="text-lg font-bold mb-4">高效學習</p>
@@ -53,9 +53,9 @@ current: index
     </div>
     <div class="md:w-1/4 ">
       <a href="#"
-        class="hover-cards h-full flex flex-col  px-4 py-12 md:mt-0 bg-neutral-900 rounded-2xl md:text-neutral-400 md:hover:text-white md:hover:ring-1 md:hover:ring-white">
+        class="group h-full flex flex-col  px-4 py-12 md:mt-0 bg-neutral-900 rounded-2xl md:text-neutral-400 md:hover:text-white md:hover:ring-1 md:hover:ring-white">
         <span
-          class="material-icons text-5xl bg-clip-text text-transparent bg-gradient-to-t from-green to-blue md:bg-transparent md:text-neutral-400">
+          class="material-icons text-5xl bg-clip-text text-transparent bg-gradient-to-t from-green to-blue md:bg-transparent md:text-neutral-400 group-hover:text-transparent">
           fmd_good
         </span>
         <p class="text-lg font-bold mb-4">指定地點</p>
@@ -73,22 +73,22 @@ current: index
     <h2 class="text-center font-bold text-2xl mb-4 md:text-[28px]">預期上課流程</h2>
     <div class="mx-auto md:m-0 w-[50px] h-[3px] bg-green mb-12"></div>
     <ul class="flex flex-col space-y-12 mt-[74px] md:flex-row md:space-x-6  md:space-y-0">
-      <li class="relative rounded-2xl md:w-1/4 border p-12">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="50" class="relative rounded-2xl md:w-1/4 border p-12">
         <p class="absolute bg-neutral-900 text-5xl font-bold text-green -top-[24px] left-12">01</p>
         <h3 class="text-2xl font-bold mb-4">預約</h3>
         <p class="text-lg">線上預約指定課程與老師 由老師安排專屬課程</p>
       </li>
-      <li class="relative rounded-2xl md:w-1/4 border p-12">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="100" class="relative rounded-2xl md:w-1/4 border p-12">
         <p class="absolute bg-neutral-900 text-5xl font-bold text-green -top-[24px] left-12">02</p>
         <h3 class="text-2xl font-bold mb-4">付款</h3>
         <p class="text-lg">支援各種支付方式 提供12期分期付款</p>
       </li>
-      <li class="relative rounded-2xl md:w-1/4 border p-12">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="150" class="relative rounded-2xl md:w-1/4 border p-12">
         <p class="absolute bg-neutral-900 text-5xl font-bold text-green -top-[24px] left-12">03</p>
         <h3 class="text-2xl font-bold mb-4">上課</h3>
         <p class="text-lg">地點由您指定<br>密集性一對一教學</p>
       </li>
-      <li class="relative rounded-2xl md:w-1/4 border p-12">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="200" class="relative rounded-2xl md:w-1/4 border p-12">
         <p class="absolute bg-neutral-900 text-5xl font-bold text-green -top-[24px] left-12">04</p>
         <h3 class="text-2xl font-bold mb-4">提供滿意度</h3>
         <p class="text-lg">提供課程滿意度及回饋 讓我們持續成長與進步</p>
@@ -104,7 +104,7 @@ current: index
     <h2 class="text-center font-bold text-2xl mb-4 md:text-[28px]">你想要學習的程式，都在這裡</h2>
     <div class="mx-auto w-[50px] h-[3px] bg-green mb-12"></div>
   </div>
-  <ul class="overflow-x-scroll course-carousel container flex mt-10">
+  <ul data-aos="fade-in" class="overflow-x-scroll course-carousel container flex mt-10">
     <li><a href="#"
         class="block whitespace-nowrap py-4 px-8 mr-4 border rounded-lg border-white hover:border-green hover:text-green">JavaScript</a>
     </li>
@@ -150,7 +150,7 @@ current: index
       <div class="mx-auto w-[50px] h-[3px] bg-green mb-12"></div>
     </div>
     <ul class="flex flex-col items-stretch space-y-4  lg:flex-row lg:space-x-4 lg:space-y-0">
-      <li class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="50" class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
         <a href="#" class="flex flex-col justify-between pt-6 pb-4">
           <div class=" px-8">
             <img class="w-24 mx-auto mb-2 rounded-full" src="assets/images/teacher01.jpg" alt="">
@@ -166,7 +166,7 @@ current: index
           </div>
         </a>
       </li>
-      <li class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="100" class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
         <a href="#" class="flex flex-col justify-between pt-6 pb-4">
           <div class=" px-8">
             <img class="w-24 mx-auto mb-2 rounded-full" src="assets/images/teacher02.jpg" alt="">
@@ -182,7 +182,7 @@ current: index
           </div>
         </a>
       </li>
-      <li class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="150" class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
         <a href="#" class="flex flex-col justify-between pt-6 pb-4">
           <div class=" px-8">
             <img class="w-24 mx-auto mb-2 rounded-full" src="assets/images/teacher03.jpg" alt="">
@@ -199,7 +199,7 @@ current: index
         </a>
       </li>
 
-      <li class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="200" class="flex lg:w-1/4 rounded-[24px] bg-neutral-800 hover:ring-2 hover:ring-green">
         <a href="#" class="flex flex-col justify-between pt-6 pb-4">
           <div class=" px-8">
             <img class="w-24 mx-auto mb-2 rounded-full" src="assets/images/teacher04.jpg" alt="">
@@ -217,7 +217,7 @@ current: index
       </li>
     </ul>
     <a href="#"
-      class="button mx-auto mt-6 text-center py-2 px-8 rounded-lg text-lg bg-gradient-to-r from-blue to-green">所有課程列表</a>
+      class="button mx-auto mt-6 text-center py-2 px-8 rounded-lg text-lg bg-gradient-to-r from-blue to-green hover:-translate-y-0.5 transition duration-200">所有課程列表</a>
   </div>
 
 
@@ -230,68 +230,68 @@ current: index
   <div class="container">
     <h2 class="text-center font-bold text-2xl mb-4 md:text-[28px]">熱門推薦課程</h2>
     <div class="mx-auto w-[50px] h-[3px] bg-green mb-12"></div>
-    <ul class="md:flex md:flex-wrap">
-      <li class="md:w-1/2 xl:w-1/4">
-        <a class="card relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
+    <ul class="md:flex md:flex-wrap text-neutral-300">
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="50"  class="md:w-1/2 xl:w-1/4">
+        <a class="card group relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
           href="#">
           <div
-            class="bg-image-hover absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info01.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full">
+            class="absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info01.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full group-hover:opacity-50">
           </div>
           <div class="absolute z-10 p-12">
-            <span class="material-icons text-4xl text-green lg:text-neutral-400">
+            <span class="material-icons text-4xl text-green lg:text-neutral-400 group-hover:text-green">
               question_answer
             </span>
             <h3 class="text-2xl font-bold mb-4 opacity-100 lg:text-white">對症下藥，專案製作</h3>
-            <div class="deco w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8"></div>
-            <p class="text-body text-lg text-neutral-300 ">除了可以瘋狂提問之外<br>還有機會一起完成專案</p>
+            <div class="w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8 group-hover:bg-color-green"></div>
+            <p class="text-lg group-hover:color-white">除了可以瘋狂提問之外<br>還有機會一起完成專案</p>
           </div>
         </a>
       </li>
-      <li class="md:w-1/2 xl:w-1/4">
-        <a class="card relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="100"  class="md:w-1/2 xl:w-1/4">
+        <a class="card group relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
           href="#">
           <div
-            class="bg-image-hover absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info02.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full">
+            class="absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info02.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full group-hover:opacity-50">
           </div>
           <div class="absolute z-10 p-12">
-            <span class="material-icons text-4xl text-green lg:text-neutral-400">
+            <span class="material-icons text-4xl text-green lg:text-neutral-400 group-hover:text-green">
               tips_and_updates
             </span>
             <h3 class="text-2xl font-bold mb-4 opacity-100 lg:text-white">激發你的學習潛力</h3>
-            <div class="deco w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8"></div>
-            <p class="text-body text-lg text-neutral-300 ">進度制課程安排&個人化學習建議 有效管理你的學習動力</p>
+            <div class="w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8 group-hover:bg-color-green"></div>
+            <p class="text-lg group-hover:color-white">進度制課程安排&個人化學習建議 有效管理你的學習動力</p>
           </div>
         </a>
       </li>
-      <li class="md:w-1/2 xl:w-1/4">
-        <a class="card relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="150"  class="md:w-1/2 xl:w-1/4">
+        <a class="card group relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
           href="#">
           <div
-            class="bg-image-hover absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info03.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full">
+            class="absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info03.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full group-hover:opacity-50">
           </div>
           <div class="absolute z-10 p-12">
-            <span class="material-icons text-4xl text-green lg:text-neutral-400">
+            <span class="material-icons text-4xl text-green lg:text-neutral-400 group-hover:text-green">
               thumb_up
             </span>
             <h3 class="text-2xl font-bold mb-4 opacity-100 lg:text-white">學習效率</h3>
-            <div class="deco w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8"></div>
-            <p class="text-body text-lg text-neutral-300 ">針對學員狀況調整內容與步調 學習精準最有效</p>
+            <div class="w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8 group-hover:bg-color-green"></div>
+            <p class="text-lg group-hover:color-white">針對學員狀況調整內容與步調 學習精準最有效</p>
           </div>
         </a>
       </li>
-      <li class="md:w-1/2 xl:w-1/4">
-        <a class="card relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
+      <li data-aos="fade-in" data-aos-duration="600" data-aos-delay="200"  class="md:w-1/2 xl:w-1/4">
+        <a class="card group relative flex flex-col justify-center items-center text-center xl:text-left h-[263px] md:h-[400px] xl:h-[615px] hover:text-white"
           href="#">
           <div
-            class="bg-image-hover absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info04.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full">
+            class="absolute bg-no-repeat bg-cover bg-center bg-[url('../images/info04.jpg')] opacity-20 h-[263px] md:h-[400px] xl:h-[615px] left-0 w-full group-hover:opacity-50">
           </div>
           <div class="absolute z-10 p-12">
-            <span class="material-icons text-4xl text-green lg:text-neutral-400">
+            <span class="material-icons text-4xl text-green lg:text-neutral-400 group-hover:text-green">
               people
             </span>
             <h3 class="text-2xl font-bold mb-4 opacity-100 lg:text-white">一對一指導</h3>
-            <div class="deco w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8"></div>
-            <p class="text-body text-lg text-neutral-300 ">針對目的進行客製化課程安排 快速的學以致用</p>
+            <div class="w-[50px] h-[3px] bg-green md:bg-white mx-auto mb-8 xl:m-0 xl:mb-8 group-hover:bg-color-green"></div>
+            <p class="text-lg group-hover:color-white">針對目的進行客製化課程安排 快速的學以致用</p>
           </div>
         </a>
       </li>
@@ -308,10 +308,10 @@ current: index
   <div class="container">
     <h2 class="text-center font-bold text-2xl mb-4 md:text-[28px]">文章分享</h2>
     <div class="mx-auto w-[50px] h-[3px] bg-green mb-12"></div>
-    <ul class="md:flex md:space-x-[40px] lg:space-x-[88px] space-y-6 md:space-y-0">
+    <ul data-aos="fade-in" data-aos-duration="800" class="md:flex md:space-x-[40px] lg:space-x-[88px] space-y-6 md:space-y-0">
       <li>
-        <a class="article relative" href="#">
-          <div class="hover-effect invisible">
+        <a class="article relative group" href="#">
+          <div class="invisible group-hover:visible">
             <div class="absolute w-8 h-8 rounded-tl-lg border-t border-l -top-8 -left-8 border-green"></div>
             <div class="absolute w-8 h-8 rounded-tr-lg border-t border-r -top-8 -right-8 border-green"></div>
             <div class="absolute w-8 h-8 rounded-br-lg border-b border-r -bottom-8 -right-8 border-green"></div>
@@ -324,8 +324,8 @@ current: index
         </a>
       </li>
       <li>
-        <a class="article relative" href="#">
-          <div class="hover-effect invisible">
+        <a class="article relative group" href="#">
+          <div class="invisible group-hover:visible">
             <div class="absolute w-8 h-8 rounded-tl-lg border-t border-l -top-8 -left-8 border-green"></div>
             <div class="absolute w-8 h-8 rounded-tr-lg border-t border-r -top-8 -right-8 border-green"></div>
             <div class="absolute w-8 h-8 rounded-br-lg border-b border-r -bottom-8 -right-8 border-green"></div>
@@ -338,8 +338,8 @@ current: index
         </a>
       </li>
       <li>
-        <a class="article relative" href="#">
-          <div class="hover-effect invisible">
+        <a class="article relative group" href="#">
+          <div class="invisible group-hover:visible">
             <div class="absolute w-8 h-8 rounded-tl-lg border-t border-l -top-8 -left-8 border-green"></div>
             <div class="absolute w-8 h-8 rounded-tr-lg border-t border-r -top-8 -right-8 border-green"></div>
             <div class="absolute w-8 h-8 rounded-br-lg border-b border-r -bottom-8 -right-8 border-green"></div>
@@ -366,7 +366,9 @@ current: index
     <div class="mx-auto w-[50px] h-[3px] bg-green mb-12"></div>
 
     <div class="relative">
-      <img class="block rounded-[24px] md:w-[525px] " src="assets/images/share.jpg" alt="">
+      <div class="border border-neutral-500 rounded-[24px] h-auto w-fit">
+        <img class="rounded-[24px] md:w-[525px] z-10 border translate-x-3 -translate-y-3" src="assets/images/share.jpg" alt="">
+      </div>
       <div class="relative md:absolute p-8 bg-white shadow-lg rounded-t-[24px] rounded-br-[24px] mt-20 md:w-[416px] md:right-0 md:-bottom-8">
         <img class="w-[100px] rounded-full -top-12 right-10 absolute " src="assets/images/student01.jpg" alt="">
         <p class="text-neutral-900 mb-2 font-bold text-lg">老師很有耐心</p>
@@ -382,7 +384,7 @@ current: index
 <div class="join-us py-10 md:py-20 text-center">
   <div class="container">
     <div
-      class="bg-neutral-800 max-w-[966px] mx-auto rounded-[24px] py-10 px-6 flex flex-col md:flex-row items-center md:px-12 md:justify-between">
+    data-aos="fade-in" class="bg-neutral-800 max-w-[966px] mx-auto rounded-[24px] py-10 px-6 flex flex-col md:flex-row items-center md:px-12 md:justify-between">
       <div class="md:flex items-center">
         <span class="material-icons text-[110px] text-neutral-400 mb-6 md:mb-0 md:mr-12">
           menu_book
